--- a/example/button.html
+++ b/example/button.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Button</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="../src/base/button/button.css">
+    <link rel="stylesheet" href="../dist/emui.css">
 </head>
 <body>
 <button class="btn btn-primary " >primary</button>
@@ -12,11 +12,13 @@
 <button class="btn btn-danger" >danger</button>
 <button class="btn btn-info" >info</button>
 <button class="btn btn-warning" >warning</button>
+<button class="btn btn-default" >default</button>
 <hr>
 <button class="btn btn-primary " disabled>primary</button>
 <button class="btn btn-success" disabled>success</button>
 <button class="btn btn-danger" disabled>danger</button>
 <button class="btn btn-info" disabled>info</button>
 <button class="btn btn-warning" disabled>warning</button>
+<button class="btn btn-default" disabled>default</button>
 </body>
 </html>
