--- a/example/input.html
+++ b/example/input.html
@@ -5,18 +5,18 @@
     <title>input</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" href="../src/base/input/input.css">
+    <link rel="stylesheet" href="../dist/emui.css">
 </head>
 <body>
-    <input type="text" class="ipt ipt-primary ">
-    <input type="text" class="ipt ipt-success">
-    <input type="text" class="ipt ipt-info">
-    <input type="text" class="ipt ipt-warning">
-    <input type="text" class="ipt ipt-danger">
+    <input type="text" class="ipt ipt-primary " value="primary">
+    <input type="text" class="ipt ipt-success" value="success">
+    <input type="text" class="ipt ipt-info" value="info">
+    <input type="text" class="ipt ipt-warning" value="warning">
+    <input type="text" class="ipt ipt-danger" value="danger">
+    <input type="text" class="ipt ipt-default" value="default">
     <input type="text" readonly class="ipt" value="这是readonly的样式">
     <input type="text"  class="ipt ipt-error" value="这是error的样式">
     <input type="text"  class="ipt ipt-right" value="这是right的样式">
-
     <input type="password"  class="ipt" value="这是password的样式">
     <input type="number"  class="ipt" value="12312">
     <input type="checkbox" id="checkbox_c1" class=" ipt" /><label for="checkbox_c1"></label>这是checkbox
