--- a/example/flex.html
+++ b/example/flex.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <title>flex</title>
-    <link rel="stylesheet" href="../src/emui.css">
+    <link rel="stylesheet" href="../dist/emui.css">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
 </head>
 <body>
 <div class="col">
     <div style="background-color: red;" class="col-cell-1">
-        <div class="row  ">
+        <div class="row ">
             <div style="background-color: red" class="row-cell-1">12</div>
             <div style="background-color: #00aee2" class="row-cell-1">2</div>
             <div style="background-color: #4cda60" class="row-cell-1">3</div>
