--- a/example/input.html
+++ b/example/input.html
@@ -5,7 +5,7 @@
     <title>input</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" href="../dist/emui.css">
+    <link rel="stylesheet" href="../dist/emui.min.css">
 </head>
 <body>
     <input type="text" class="ipt ipt-primary " value="primary">
