1. 添加`ipt-outline`

--- a/example/input.html
+++ b/example/input.html
@@ -17,6 +17,7 @@
     <input type="text" readonly class="ipt" value="这是readonly的样式">
     <input type="text"  class="ipt ipt-error" value="这是error的样式">
     <input type="text"  class="ipt ipt-right" value="这是right的样式">
+    <input type="text"  class="ipt ipt-outline" value="这是right的样式">
     <input type="password"  class="ipt" value="这是password的样式">
     <input type="number"  class="ipt" value="12312">
     <input type="checkbox" id="checkbox_c1" class=" ipt" /><label for="checkbox_c1"></label>这是checkbox
