修复边界工具rem空格问题

--- a/example/rem.html
+++ b/example/rem.html
@@ -17,5 +17,8 @@
 <div class="row">
     <p class=" row-cell-1">1223243</p><input type="text" class="ipt ipt-danger"/>
 </div>
+<div class="row p-l-5 p-r-5">
+    <input type="text" class="ipt ipt-danger "/>
+</div>
 </body>
 </html>
