- 修复 col 嵌套问题

--- a/example/flex.html
+++ b/example/flex.html
@@ -308,27 +308,13 @@
 </div>
 
 <div class="page ">
-    <div class="col">
-        <div class="div1 cell-1">
-            1
-        </div>
+    <div class="row">
+
         <div class="div2 cell-full ">
-            <div style="overflow-x: scroll">
+            <div class="cell-scroll-x">
                 1231231231h2iuhjhdsfjkahkdjshfkadsnfkbdsjahitewhtkrkjshgvjkfdhgjabkjbvkxcnvlkn,amnfkhdslknds,jfhkjdlsafmldsn,fnaslijflkewnkjrheojfklm;asdnflasd;fmjdsfl;sadmfljdsflkdslfahfljdafhjjdsjfksdhfkhsjdjk
             </div>
-        </div>
-        <div class="div3  cell-1 col-full">
-            <div class="row content-around">
-                <div class="div1 ">
-                    11
-                </div>
-                <div class="div2 ">
-                    22
-                </div>
-                <div class="div3  ">
-                    33
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
