--- a/example/text.html
+++ b/example/text.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../dist/emui.min.css">
 </head>
 <body>
+<p>
+    normal
+</p>
 <p class="text-primary">
     text-primary
 </p>
